# bezel

./: .gitignore  Cargo.toml  README.md  bezel-linux-amd64  config.nix.example  config.toml.example  flake.nix  install.sh
.github/workflows/: update-flake-lock.yml
modules/: homeManager.nix  nixos.nix
src/: config.rs  device.rs  dispatcher.rs  gesture.rs  main.rs  passthrough.rs
viz/: index.html  server.py
