[package]
name = "bezel"
version = "0.1.6"
edition = "2021"
description = "A Linux daemon that turns trackpad edge zones into a configurable control surface"
license = "GPL-3.0-or-later"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
evdev = { version = "0.12.2", features = ["tokio"] }
uinput = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
notify = "6.1.1"
dirs = "5.0"
